sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:35: error: value ||! is not a member of Boolean
		if(swapC && !swapD ||!swapC && swapD) return;
                                   ^